# fastf1_utils

./: README.md  gemini.md  pyproject.toml  requirements.txt  standard_plots.py
fastf1_utils/: new_utils.py
