[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastf1_utils"
version = "0.1.0"
authors = [
  { name="Edward Reehorst", email="youremail@example.com" },
]
description = "A python package adding commonly used plotting functionality to the fastf1 python package."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastf1",
    "pandas",
    "matplotlib",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/edward-reehorst/fastf1_utils"
"Bug Tracker" = "https://github.com/edward-reehorst/fastf1_utils/issues"
